# reddit-gpt-summarizer

./: .env.example  .gitignore  .pylintrc  README.md  app.py  config.py  debug_tools.py  json-schema-generated.json  log_tools.py  logger.py  presets.py  pyproject.toml  reddit.py  requirements.txt  streamlit_setup.py  test_main.py  test_reddit.py  utils.py
.github/workflows/: ai_code_review.yml  ruff_lint_and_format_check.yml
app/: __init__.py  config.py  debug_tools.py  env.py  generate_data.py  llm_handler.py  log_tools.py  main.py  recursive_summary.py
app/data_types/: summary.py
app/model_configs/: anthropic_ai_models.json  models.json  open_ai_chat_models.json  open_ai_instruct_models.json
app/services/: anthropic_connector.py  generate_data.py  litellm_connector.py  openai_connector.py  openai_methods.py  recursive_summary.py
app/tests/: test_main.py  test_utils.py
app/ui/: render.py  settings.py
app/utils/: __init__.py  common.py  llm_utils.py  streamlit_decorators.py
data_types/: typedicts.py
reddit_gpt_summarizer/: __init__.py  main.py  recursive_summary.py
reddit_gpt_summarizer/utils/: __init__.py  utils.py
services/: data.py  ui.py
src/: main.py
tests/: test_main.py  test_utils.py
utils/: common.py  data.py  logger.py  openai.py  recursive_summary.py  streamlit_debug.py  streamlit_decorators.py  ui.py
