[tool.poetry]
name = "reddit-gpt-summarizer"
version = "0.1.0"
description = "Summarize Reddit Threads with GPT"
authors = ["Sean Dearnaley <seandearnaley@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
requests = "^2.28.2"
openai = "^0.26.4"
python-dotenv = "^0.21.1"
tiktoken = "^0.2.0"
ratelimit = "^2.2.1"
streamlit = "^1.18.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^0.991"
types-requests = "^2.28.11.8"
black = "^23.1.0"
colorlog = "^6.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]