[tool.poetry]
name = "reddit-gpt-summarizer"
version = "0.2.0"
description = "Summarize Reddit Threads with LLMs"
authors = ["Sean Dearnaley <seandearnaley@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
requests = "^2.28.2"
openai = "^0.27.2"
python-dotenv = "^0.21.1"
tiktoken = "^0.2.0"
streamlit = "^1.18.1"
pyrate-limiter = "^2.10.0"
praw = "^7.7.0"
colorlog = "^6.7.0"
anthropic = "^0.2.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
mypy = "^0.991"
types-requests = "^2.28.11.8"
black = "^23.1.0"
debugpy = "^1.6.6"
pylint = "^2.16.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
init-hook='import sys; sys.path.append("./app")'
disable = [
    "E0402"
]